# swagger.json
@@ -158,18 +158,18 @@
           }
         }
       },
-      "/admin/user/{name}": {
+      "/admin/user/{email}": {
         "get": {
           "tags": [
             "ADMIN"
           ],
-          "summary": "使用{name}找出特定用戶",
+          "summary": "使用{email}找出特定用戶",
           "operationId": "findSpecificUser",
           "parameters": [
             {
               "in": "path",
-              "name": "name",
-              "description": "輸入使用者名稱",
+              "name": "email",
+              "description": "輸入使用者電子郵件",
               "required": true,
               "schema": {
                 "type": "string",
@@ -195,12 +195,12 @@
           "tags": [
             "ADMIN"
           ],
-          "summary": "使用{name}刪除特定用戶",
+          "summary": "使用{email}刪除特定用戶",
           "operationId": "deleteSpecificUser",
           "parameters": [
             {
               "in": "path",
-              "name": "name",
+              "name": "email",
               "description": "輸入使用者名稱",
               "required": true,
               "schema": {
@@ -272,6 +272,55 @@
               "in": "path",
               "name": "gasoline",
               "description": "輸入汽油種類",
+              "required": true,
+              "schema": {
+                "type": "string",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                }  
+              }
+            }
+
+          ],
+          "responses": {
+            "200": {
+              "description": "成功！"
+            },
+            "400": {
+              "description": "連線問題",
+              "content": {}
+            }
+          }
+        }
+      },
+      "/crawler/price/history/{gasoline}/{num}": {
+        "get": {
+          "tags": [
+            "PRICE"
+          ],
+          "summary": "列出特定汽油之油價歷史(限定比數)",
+          "operationId": "findPrice",
+          "parameters": [
+            {
+              "in": "path",
+              "name": "gasoline",
+              "description": "輸入汽油種類",
+              "required": true,
+              "schema": {
+                "type": "string",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                }  
+              }
+            },
+            {
+              "in": "path",
+              "name": "num",
+              "description": "輸入筆數",
               "required": true,
               "schema": {
                 "type": "string",
